--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@babel/preset-env": "^7.21.4",
     "@tensorflow/tfjs": "^4.2.0",
     "dotenv": "^16.0.0",
+    "eslint": "^8.38.0",
+    "jest": "^29.5.0",
     "json-stringify": "^1.0.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.57.0"
   },
-"scripts": {
+  "scripts": {
     "start": "node index.js",
     "build": "npm run eslint && npm run jest",
     "eslint": "eslint .",
