--- a/.toml
+++ b/.toml
@@ -1,6 +1,3 @@
 [build]
-  command = "npm install && npm run build"
-  publish = "build/"
-
-[dev]
-  command = "npm install && npm run start"
+  functions = "functions"
+  command = "netlify-lambda install && mkdir ./build"
