--- a/package.json
+++ b/package.json
@@ -15,14 +15,10 @@
     "jest": "^29.5.0",
     "json-stringify": "^1.0.0",
     "lodash": "^4.17.21",
+    "netlify-lambda": "^2.0.16",
     "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.57.0"
   },
-  "scripts": {
-    "start": "node index.js",
-    "build": "npm run eslint",
-    "eslint": "eslint .",
-    "jest": "jest"
-  },
+
   "type": "module"
 }
