--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.57.0"
   },
-
+  "scripts": {
+    "start": "node index.js",
+    "build": "npm run eslint",
+    "eslint": "eslint .",
+    "jest": "jest"
+  },
   "type": "module"
 }
