--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@babel/preset-env": "^7.21.4",
     "@tensorflow/tfjs": "^4.2.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "json-stringify": "^1.0.0",
     "lodash": "^4.17.21",
@@ -19,11 +18,18 @@
     "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.57.0"
   },
+  "extends": [
+    "eslint-config-netlify"
+  ],
   "scripts": {
     "start": "node index.js",
     "build": "npm run eslint",
     "eslint": "eslint .",
     "jest": "jest"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-netlify": "^1.3.0"
+  }
 }
